MANVIR SANDBOX/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Type_Update_from_Lead__c</fullName>
        <label>Account Type Update (from Lead)</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Airwide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascension Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Antarctic Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>INTID__c</fullName>
        <label>INTID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Type__c</fullName>
        <label>Network Type</label>
        <picklist>
            <picklistValues>
                <fullName>GSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operator_Tier__c</fullName>
        <label>Operator Tier</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Account Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AsiaPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Hop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscribers_Last_Updated__c</fullName>
        <label># Subscribers Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscribers__c</fullName>
        <label># Subscribers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telco_Sector__c</fullName>
        <label>Telco Sector</label>
        <picklist>
            <picklistValues>
                <fullName>AGGREGATOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVNO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVNO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPERATOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH VENDOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Americas_accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>notEqual</operation>
            <value>Canada,USA</value>
        </filters>
        <label>LatAm accounts</label>
    </listViews>
    <listViews>
        <fullName>Americas_accounts1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Americas accounts</label>
    </listViews>
    <listViews>
        <fullName>Americasaccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Americas accounts</label>
    </listViews>
    <listViews>
        <fullName>Australiaaccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>,Australia,Fiji,French Polynesia,New Caledonia,New Zealand,Solomon Islands</value>
        </filters>
        <label>Australia accounts</label>
    </listViews>
    <listViews>
        <fullName>C_Smith</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>smith</value>
        </filters>
        <label>C Smith</label>
    </listViews>
    <listViews>
        <fullName>Customers</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RATING</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Subscribers__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>Customers</label>
    </listViews>
    <listViews>
        <fullName>EMEA_accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notContain</operation>
            <value>Partner</value>
        </filters>
        <label>EMEA accounts</label>
    </listViews>
    <listViews>
        <fullName>EMEAaccounts2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>contains</operation>
            <value>Customer</value>
        </filters>
        <label>EMEA accounts</label>
    </listViews>
    <listViews>
        <fullName>MartinWilliams</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Williams</value>
        </filters>
        <label>Martin Williams</label>
    </listViews>
    <listViews>
        <fullName>MatthewGriffiths2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>rushton</value>
        </filters>
        <label>M Griffiths</label>
    </listViews>
    <listViews>
        <fullName>MikeAspinall</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Aspinall</value>
        </filters>
        <label>Mike Aspinall</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>